# lela

./: .gitignore  README.md
lela_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lela_ros/install/opencv_pkg/lib/opencv_pkg/: deteksi_warna  dropping  dummy_vfr  hsv_config  program_warna  servo_controller  status_text_sender
lela_ros/install/opencv_pkg/share/opencv_pkg/: package.dsv  package.ps1  package.sh
lela_ros/install/opencv_pkg/share/opencv_pkg/launch/: main_launch.py
lela_ros/log/: latest_build  latest_list
lela_ros/src/: README.md
lela_ros/src/opencv_pkg/: package.xml  setup.py
lela_ros/src/opencv_pkg/launch/: main_launch.py  test_launch.py
lela_ros/src/opencv_pkg/log/: latest_list
lela_ros/src/opencv_pkg/opencv_pkg/: deteksi_warna.py  dropping.py  dropping_dummy.py
lela_ros/src/opencv_pkg/opencv_pkg/log/: latest_list
lela_ros/src/opencv_pkg/test/: test_copyright.py  test_flake8.py  test_pep257.py
scripts/: colour_detect.py
src/: colour_detect.py  copydeteksiwarna.py  deteksiwarna.py  dropping.py  hsv_config.py  load-img.cpp
