<!-- <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sakazu@todo.todo">sakazu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

 -->

 <?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypejson="urn:oasis:names:tc:entity:xmlns:xml:catalog"?>
<package format="3">
  <name>opencv_pkg</name>
  <version>0.0.0</version>
  <description>Computer vision package for color detection and autonomous dropping system using OpenCV</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>mavros_msgs</depend>
  
  <!-- Python package dependencies (handled by setup.py) -->
  <!-- opencv-python -->
  <!-- numpy -->
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
